2008-02-03  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/pwio.c, lib/pwio.h: New function to find an user by
	its UID on the local database.

2008-02-02  Nicolas François  <nicolas.francois@centraliens.net>

	* po/*.po: Updated PO files.
	* libmisc/age.c, libmisc/yesno.c, src/lastlog.c, src/grpck.c,
	src/chfn.c, src/passwd.c, src/chage.c, src/login.c, src/sulogin.c,
	src/chsh.c: Fix call to puts (remove end of line, or use fputs).
	* po/*.po: Unfuzzy PO files according to above change.

2008-01-26  Nicolas François  <nicolas.francois@centraliens.net>

	Fix build failures with --disable-shadowgrp. Thanks to Jürgen
	Daubert for the patch.
	* libmisc/salt.c: Include <stdio.h>, needed for stderr and printf
	functions.
	* lib/encrypt.c: Include <stdio.h>, needed for perror, stderr and
	printf functions
	* src/usermod.c: sgr_locked exists only if SHADOWGRP is defined.
	* src/chgpasswd.c: Only check is the gshadow file exists if
	SHADOWGRP is defined.

2008-01-24  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c, src/chfn.c, src/chage.c, src/chsh.c, src/grpck.c,
	src/vipw.c, src/pwck.c, src/sulogin.c, src/newgrp.c,
	src/userdel.c, src/lastlog.c, src/groupmems.c, src/usermod.c,
	src/expiry.c, src/groupdel.c, src/useradd.c, src/su.c,
	src/groupmod.c, src/passwd.c, src/groupadd.c, src/login.c,
	src/suauth.c, src/faillog.c, src/id.c, libmisc/limits.c,
	libmisc/addgrps.c, libmisc/env.c, libmisc/age.c, libmisc/yesno.c,
	lib/getdef.c: Replace printf by puts for fixed strings. This would
	avoid issues caused by formats introduced in translated strings.

2008-01-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Strings improvement s/can't get unique/no more
	available/.

2008-01-23  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/usermod.c: Check that the new fields set with -u, -s,
	-l, -g, -f, -e, -d, and -c differ from the old ones. If a